--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Drag Papers 🤝</title>
+  <title> Friendship Again?🤝</title>
   <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Short+Stack&amp;family=Homemade+Apple&amp;display=swap'><link rel="stylesheet" href="./style.css">
 
 </head>
@@ -42,7 +42,7 @@
 <div class="paper red">
 <p class="p1">You are my true friend in my life
   Made a lot of connections. </p>
-  <p class="p1">but you are special to me <span style="color: red !important;">❤️</span></p>
+  <p class="p1">but you are special to me <span style="color: red !important;">🪄</span></p>
 </div>
 
 <div class="paper">
